the position of icons has been fixed so that they look aligned

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -227,7 +227,7 @@ padding: 0;
     color: #6bdcc0;
     width: 24%;
     height: 3rem;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .img-txt-group{
